# ControlSystem

./: CMakeLists.txt  DESIGN.md  README.md
include/actuators/: pwm_controller.hpp
include/camera/: camera_logger.hpp
include/core/: fault_handler.hpp  scheduling.hpp
include/drivers/: gpio_interrupts.hpp  i2c_bus.hpp
include/fsm/: state_machine.hpp
include/sensors/: mpu6050.hpp
src/: main.cpp
src/actuators/: pwm_controller.cpp
src/camera/: camera_logger.cpp
src/core/: fault_handler.cpp  scheduling.cpp
src/drivers/: gpio_interrupts.cpp  i2c_bus.cpp
src/fsm/: state_machine.cpp
src/sensors/: mpu6050.cpp
tests/: test_fsm.cpp
